--- a/style.css
+++ b/style.css
@@ -131,6 +131,43 @@ li {
   right: 30px;
 }
 
+/* Fourth Section Styles */
+.fourth-section {
+  height: 300px;
+  padding: 5% 5%;
+  border-bottom: 1px solid #363958;
+}
+
+.fourth-section h3 {
+  padding-right: 20px;
+}
+
+.html {
+  border: 2px solid #363958;
+  width: 100%;
+  height: 10px;
+  border-radius: 10px;
+}
+
+.ninty {
+  width: 90%;
+  height: 10px;
+  background-color: #363958;
+}
+
+.css {
+  border: 2px solid #363958;
+  width: 100%;
+  height: 10px;
+  border-radius: 10px;
+}
+
+.ninty-five {
+  width: 95%;
+  height: 10px;
+  background-color: #363958;
+}
+
 /* Extra Styles */
 .text-center {
   text-align: center;
